fix(components/form-elements/btn): fix btn label overlaping with calendar

--- a/src/components/form-elements/btn/_btn.sass
+++ b/src/components/form-elements/btn/_btn.sass
@@ -92,7 +92,7 @@
 
   &__label
     position: relative
-    z-index: 10
+    z-index: 5
     flex-grow: 1
     padding-top: 1px
     text-align: center
